--- a/app/src/main/res/layout/fragment_config_cnf.xml
+++ b/app/src/main/res/layout/fragment_config_cnf.xml
@@ -72,6 +72,45 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/ReminderId" />
+
+            <EditText
+                android:id="@+id/edReminderId"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/ReminderId" />
+
+            <CheckBox
+                android:id="@+id/chOnlyReady"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -83,11 +122,6 @@
                 android:gravity="center"
                 android:text="@string/Save" />
 
-            <Button
-                android:id="@+id/btnClearDb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Clear db" />
         </LinearLayout>
     </LinearLayout>
 
