--- a/app/src/main/res/layout/fragment_config_cnf.xml
+++ b/app/src/main/res/layout/fragment_config_cnf.xml
@@ -100,7 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/ReminderId" />
+                android:text="@string/ReadyOnly" />
 
             <CheckBox
                 android:id="@+id/chOnlyReady"
