--- a/app/src/main/res/layout/item_goods_order_review.xml
+++ b/app/src/main/res/layout/item_goods_order_review.xml
@@ -156,6 +156,20 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/done" />
+
+            <Button
+                android:id="@+id/hc"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginBottom="2dp"
+                android:text="@string/HC"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:background="@drawable/btn_border"
+                app:layout_constraintBottom_toBottomOf="@+id/cancel"
+                app:layout_constraintStart_toEndOf="@+id/cancel"
+                app:layout_constraintTop_toTopOf="@+id/cancel" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
