--- a/app/src/main/res/layout/fragment_fr_goods_contens.xml
+++ b/app/src/main/res/layout/fragment_fr_goods_contens.xml
@@ -60,6 +60,16 @@
                 android:drawableLeft="@drawable/order"
                 android:text="@string/PartnerOrders" />
 
+            <Button
+                android:id="@+id/armsoft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@null"
+                android:drawableLeft="@drawable/order"
+                android:text="@string/ExportToArmSoft" />
+
         </LinearLayout>
     </LinearLayout>
 
