--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,25 @@
             app:layout_constraintTop_toBottomOf="@+id/tvDept" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <LinearLayout
+        android:id="@+id/llConnState"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:textSize="28dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorWhite"
+            android:text="No connection" />
+    </LinearLayout>
+
 </FrameLayout>
