--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorSeparator">#D5D5D5</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="lightblue">#ABDEFA</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
